# retail-insights

./: .gitignore  Makefile  README.md  alembic.ini  api.md  pyproject.toml  requirements.txt  schema.md
alembic/: env.py
alembic/versions/: 0b88f6ef68a4_initial_tables.py  6d0d1d058adc_fix_datetime_timezone_boolean_is_return_.py  929164029503_add_revenue_timestamps_status_fix.py  92c72a7b275e_initial_tables_products_rename.py  94662a3daa5d_initial_schema.py
app/: db.py  main.py
app/models/: __init__.py  analysis_run.py  inventory.py  product.py  sale.py  sku.py  upload_batch.py
app/parsers/: csv_parser.py
app/routers/: analytics.py  batches.py  products.py  upload.py
app/schemas/: analytics.py  batch.py  product.py  upload.py
app/services/: analytics.py  explain.py  products.py
app/validators/: inventory.py  products.py  sales.py
data/: README.md  uniqlo_sg_products.csv
data/raw/: README.md  inventory.csv  sales.csv  uniqlo_sg_products.csv
docs/: api.md  mvp_scope.md  project_overview.md  retail_insights_engine_blueprint.md  schema.md
generator/: generate_dataset.py
pics/drawio/: conceptual_ERD.drawio  data_flow.drawio  logical_ERD.drawio  system_architecture.drawio  upload_validate_flowchart.drawio
scripts/: seed.py  setup_windows.bat
tests/: conftest.py  test_batches.py  test_products.py  test_upload_inventory.py  test_upload_products.py  test_upload_sales.py
